test3-2022-11-26.log
regress/test3.fir:166372:5: error: firrtl.constant attribute has wrong sign
    wire _tmp3120: UInt<15>
    ^
regress/test3.fir:166372:5: note: see current operation: %8 = "firrtl.constant"() {value = -12133 : si15} : () -> !firrtl.uint<15>
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 25.9403 seconds

  ----User Time----  ----Wall Time----  ----Name----
    4.2571 (  9.4%)    4.2571 ( 16.4%)  FIR Parser
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse OMIR
    3.3227 (  7.3%)    3.3227 ( 12.8%)    Parse modules
    0.8854 (  2.0%)    0.8854 (  3.4%)    Verify circuit
   40.8366 ( 90.0%)   21.4163 ( 82.6%)  'firrtl.circuit' Pipeline
    0.8863 (  2.0%)    0.8863 (  3.4%)    LowerFIRRTLAnnotations
    4.1926 (  9.2%)    2.2913 (  8.8%)    'firrtl.module' Pipeline
    1.2995 (  2.9%)    0.7043 (  2.7%)      DropName
    2.8930 (  6.4%)    1.5870 (  6.1%)      CSE
    0.0000 (  0.0%)    0.0000 (  0.0%)        (A) DominanceInfo
    0.0000 (  0.0%)    0.0000 (  0.0%)    InjectDUTHierarchy
    0.1554 (  0.3%)    0.0853 (  0.3%)    'firrtl.module' Pipeline
    0.1554 (  0.3%)    0.0853 (  0.3%)      LowerCHIRRTLPass
    0.2865 (  0.6%)    0.2865 (  1.1%)    InferWidths
    0.8656 (  1.9%)    0.8656 (  3.3%)    MemToRegOfVec
    1.4440 (  3.2%)    1.4440 (  5.6%)    InferResets
    0.1653 (  0.4%)    0.1653 (  0.6%)      (A) circt::firrtl::InstanceGraph
    0.2577 (  0.6%)    0.2577 (  1.0%)    WireDFT
    1.2722 (  2.8%)    0.7072 (  2.7%)    'firrtl.module' Pipeline
    1.2722 (  2.8%)    0.7072 (  2.7%)      FlattenMemory
    1.4067 (  3.1%)    1.4067 (  5.4%)    LowerFIRRTLTypes
    4.7867 ( 10.6%)    2.7036 ( 10.4%)    'firrtl.module' Pipeline
    3.5310 (  7.8%)    1.9490 (  7.5%)      ExpandWhens
    1.2556 (  2.8%)    0.7546 (  2.9%)      SFCCompat
    1.8327 (  4.0%)    1.8327 (  7.1%)    Inliner
    1.4741 (  3.2%)    0.8067 (  3.1%)    'firrtl.module' Pipeline
    1.4741 (  3.2%)    0.8066 (  3.1%)      RandomizeRegisterInit
    1.2661 (  2.8%)    1.2661 (  4.9%)    CheckCombCycles
    0.2670 (  0.6%)    0.2670 (  1.0%)      (A) circt::firrtl::InstanceGraph
    7.5393 ( 16.6%)    4.1646 ( 16.1%)    'firrtl.module' Pipeline
    7.1946 ( 15.9%)    3.9724 ( 15.3%)      Canonicalizer
    0.3446 (  0.8%)    0.1922 (  0.7%)      InferReadWrite
    0.1527 (  0.3%)    0.1527 (  0.6%)    PrefixModules
    0.0586 (  0.1%)    0.0586 (  0.2%)      (A) circt::firrtl::InstanceGraph
    0.0000 (  0.0%)    0.0000 (  0.0%)      (A) circt::firrtl::NLATable
    0.5748 (  1.3%)    0.5748 (  2.2%)    IMConstProp
    0.2668 (  0.6%)    0.2668 (  1.0%)  Rest
   45.3606 (100.0%)   25.9403 (100.0%)  Total

{
  totalTime: 25.988,
  maxMemory: 1057034240
}
